# crumple

./: .gitignore  CMakeLists.txt  README.md  example.yaml  legit_images.yaml  legit_images_yaml
src/: CMakeLists.txt  collapser.c  collapser.h  datatypes.c  datatypes.h  helpers.c  helpers.h  imgen.c  imgen.h  input.yaml  main.c  parser.c  parser.h  parsing_exec.c
test/: CMakeLists.txt  test_collapser.c  test_helpers.c  test_parser.c
test/test_yamls/: input.yaml  no_configs.yaml  one_180.yaml  one_90.yaml  one_all.yaml  one_no.yaml  testy.yaml  three_no.yaml  two_all.yaml  two_no.yaml
